eliminate warnings in Biovista's code of new BoxedPrimiteve(primitive p)